[gd_scene load_steps=9 format=3 uid="uid://c2737dsntwjmv"]

[ext_resource type="Texture2D" uid="uid://n27u1npfywh5" path="res://assets/image/RamboCharacter/ChatGPT Image Apr 22, 2025, 02_44_15 PM.png" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://hbt0jsakdfjw" path="res://assets/image/RamboCharacter/ChatGPT Image Apr 19, 2025, 03_37_35 PM.png" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bijxgsxjbcr1u" path="res://scripts/main_menu.gd" id="1_wu84c"]
[ext_resource type="FontFile" uid="uid://cxru26l8hinl4" path="res://assets/fonts/pixeboy-font/Pixeboy-z8XGD.ttf" id="3_bqqt6"]

[sub_resource type="Theme" id="Theme_wu84c"]
default_font = ExtResource("3_bqqt6")
Label/colors/font_color = Color(0.94902, 0.662745, 0, 1)

[sub_resource type="Theme" id="Theme_bqqt6"]
default_font = ExtResource("3_bqqt6")
default_font_size = 50
Button/colors/font_color = Color(0.94902, 0.662745, 0, 1)

[sub_resource type="Theme" id="Theme_rtw2f"]
default_font = ExtResource("3_bqqt6")
default_font_size = 50
Button/colors/font_color = Color(0.94902, 0.662745, 0, 1)

[sub_resource type="Theme" id="Theme_8ln24"]
default_font = ExtResource("3_bqqt6")
Label/colors/font_color = Color(0.94902, 0.662745, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu84c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="Node" parent="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = -1.0
texture = ExtResource("1_ekxnf")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BG"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.567
offset_right = -128.0
offset_bottom = 8.58398
scale = Vector2(0.494124, 0.634749)

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/BG/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_l6cm7")

[node name="Titles&Buttons" type="Node" parent="CanvasLayer"]

[node name="TitleContainer" type="MarginContainer" parent="CanvasLayer/Titles&Buttons"]
anchors_preset = -1
anchor_left = 0.728
anchor_top = 0.122
anchor_right = 0.728
anchor_bottom = 0.122
offset_left = -307.656
offset_top = -67.056
offset_right = 308.344
offset_bottom = 24.944
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wu84c")

[node name="Label" type="Label" parent="CanvasLayer/Titles&Buttons/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "TITLE_LABEL"

[node name="Buttons" type="MarginContainer" parent="CanvasLayer/Titles&Buttons"]
anchors_preset = -1
anchor_left = 0.679
anchor_top = 0.465
anchor_right = 0.679
anchor_bottom = 0.465
offset_left = -117.208
offset_top = -69.32
offset_right = 77.792
offset_bottom = 63.68
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Titles&Buttons/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 2.21
theme = SubResource("Theme_bqqt6")
theme_override_constants/separation = 11

[node name="PlayButton" type="Button" parent="CanvasLayer/Titles&Buttons/Buttons/VBoxContainer"]
layout_mode = 2
text = "MENU_LABEL_PLAY"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Titles&Buttons/Buttons/VBoxContainer"]
layout_mode = 2
text = "MENU_OPTIONS"

[node name="ExitButton" type="Button" parent="CanvasLayer/Titles&Buttons/Buttons/VBoxContainer"]
layout_mode = 2
text = "MENU_LABEL_QUIT"

[node name="TransaltionButtons" type="MarginContainer" parent="CanvasLayer/Titles&Buttons"]
anchors_preset = -1
anchor_left = 0.651
anchor_top = 0.615
anchor_right = 0.651
anchor_bottom = 0.615
offset_left = -50.952
offset_top = 46.48
offset_right = 69.048
offset_bottom = 83.48

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Titles&Buttons/TransaltionButtons"]
layout_mode = 2
theme = SubResource("Theme_rtw2f")
theme_override_constants/separation = 10

[node name="EnButton" type="Button" parent="CanvasLayer/Titles&Buttons/TransaltionButtons/HBoxContainer"]
layout_mode = 2
text = "EN"

[node name="FrButton" type="Button" parent="CanvasLayer/Titles&Buttons/TransaltionButtons/HBoxContainer"]
layout_mode = 2
text = "FR"

[node name="TrilogyContianer" type="MarginContainer" parent="CanvasLayer/Titles&Buttons"]
anchors_preset = -1
anchor_left = 0.773
anchor_top = 0.914
anchor_right = 0.773
anchor_bottom = 0.914
offset_left = -333.496
offset_top = -46.272
offset_right = 649.504
offset_bottom = 39.728
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="CanvasLayer/Titles&Buttons/TrilogyContianer"]
layout_mode = 2
theme = SubResource("Theme_8ln24")
theme_override_font_sizes/font_size = 150
text = "TRIOLOGY_LABEL"

[connection signal="pressed" from="CanvasLayer/Titles&Buttons/Buttons/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Titles&Buttons/Buttons/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Titles&Buttons/TransaltionButtons/HBoxContainer/EnButton" to="." method="_on_en_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Titles&Buttons/TransaltionButtons/HBoxContainer/FrButton" to="." method="_on_fr_button_pressed"]
